environments/local/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todolist
  labels:
    pod-security.kubernetes.io/enforce: restricted
